# beta_unitree_utilities

./: README.md
arm_movement/LanzamientoAura/: aplaudir.py  entrada_saludo.txt  macarena.txt  ohno.py  ontarobot.py  reina_salu2.py  sorprendido.py  wasd_control.py  yo_soy_aura.py  yo_soy_aura.txt
arm_movement/g1/Robotics4p0/: 180325.txt  g1_moveInTime_control.py  g1_wasd_control_v2p0.py
arm_movement/g1/captura_final/: captura_tuneada2.py  ejecucion_posiciones.py
arm_movement/g1/demostracion_24_04_2025/: g1_control_teclado_p1.py  ubicar_agarrar.py
arm_movement/g1/high_level/: g1_arm5_sdk_dds_example.py
arm_movement/g1/nsx_063/: prueba_de_audio.py  prueba_de_audio_grabado.py
arm_movement/g1_pcColiVRi/AUAF/: speak_Test.py
arm_movement/g1_pcColiVRi/Cinematica/: analisis_urdf.ipynb
arm_movement/g1_pcColiVRi/Codigos_Control_todo/: low_level_example.py
arm_movement/g1_pcColiVRi/Robotics4p0/: g1_arm_sdk_moveV2.py
arm_movement/g1_pcColiVRi/audio/: g1_audio_client_example.py  g1_audio_client_example_edited.py
arm_movement/g1_pcColiVRi/captura_final/: Boxeo.py  Boxeo.txt  add2.txt  (+32 more)
arm_movement/g1_pcNico/: Prueba_repro_audio.m4a
arm_movement/lanzamiento_aura/: bajar_brazos.py  bajar_brazos.txt  control_scripts.py  coordinacion1.py  coordinacion1.txt  llamadoR.py  macarena.py  macarena.txt  militar.txt  nao_saludo.py  nao_saludo.txt  wasd_control.py
cpp/: .gitignore  CMakeLists.txt
cpp/audio/: CMakeLists.txt  play_wav.cpp
cpp/executables/: CMakeLists.txt  audio_service_node.cpp  play_wav_executable.cpp  play_wav_request.cpp
cpp/src/: CMakeLists.txt
(+219 files in other folders)
